--- a/manifest.json
+++ b/manifest.json
@@ -2,13 +2,15 @@
 	"manifest_version": 2,
 	"name": "Heyaw",
 	"description": "A keyboard that plays 'Heyaw' sounds",
-	"version": "1.0",
+	"version": "1.2",
 
 	"browser_action": {
 		"default_icon": "icon.png",
 		"default_popup": "popup.html"
 	},
 	"permissions": [
-		"storage"
+		"storage",
+		"http://localhost/",
+		"http://howmanyheyaws.tk/"
 	]
 }
